feat(compile): add --native to emit a single GraalVM binary
Phase 3.2: `ktx compile --native [--collect-metadata]` produces a single
self-contained binary via GraalVM native-image. hello (38MB / ~22ms),
jackson (41MB / ~15ms). End users need no JRE, no ktx, no metadata —
just the binary.

Three layers of metadata: ktx-bundled base (Kotlin scripting host
reflection), GRMR jackson subset, and per-script `<script>.native-meta/`
captured by `--collect-metadata` running native-image-agent. NativeBootstrap
shim works around `JvmScriptingHostConfigurationKt.<clinit>` NPE by setting
java.home before the scripting host's static initializers fire.

See `reports/phase-3.2.md` for the 9 non-trivial gotchas hit along the way.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>